production/argo-cd/resources/namespace.yaml
# https://github.com/argoproj/argoproj-deployments/tree/master/argocd
apiVersion: v1
kind: Namespace
metadata:
  name: argo-cd
